styled navlinks but still have issue with spacing navlinks

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -3,6 +3,9 @@
     box-shadow: 0 2px 8px 0 rgba(0,0,0,.25);
     height: 100px;
     width: 100%;
+    font-family: nimbus-sans-condensed,sans-serif;
+    text-transform: uppercase;
+    font-size: .875rem;
 }
 
 .navbar .navbar-wrapper {
@@ -26,6 +29,11 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: #000;
 }
 
 .order-button {
